Fixed a bug: file selector text not showing in dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -167,6 +167,10 @@
         textarea:hover {
           outline: 2px solid #333333;
         }
+
+        input::file-selector-button {
+          color: black;
+        }
       }
     }
   }
